# rexis

./: .dockerignore  .env-template  .env.example  .gitignore  .pdm-python  LICENSE.md  README.md  docker-compose.yml  log.json  pyproject.toml
.docker/: app.dockerfile  ghidra.dockerfile
.docker/database/: db.dockerfile
.docker/db/: db.dockerfile  init.sql
.docker/ghidra-server/: ghidra-server.dockerfile  start-ghidra-mcpo.sh  traefik_dynamic.yml
alembic/: README  env.py
alembic/versions/: 09a6655cb612_initial_documents_table.py  d8f3ccb836ca_init_embeddings.py
analysis/: aggregation-output.json  aggregation-report.csv
analysis/baseline/baseline-analysis-botnet-run-2508/: baseline-analysis-botnet-run-2508.report.json  baseline_summary.json
analysis/baseline/baseline-analysis-botnet-run-vt-2508/: baseline-analysis-botnet-run-vt-2508.report.json  baseline_summary.json
analysis/baseline/baseline-analysis-ransomware-run-2508/: baseline-analysis-ransomware-run-2508.report.json  baseline_summary.json
analysis/baseline/baseline-analysis-ransomware-run-vt-2508/: baseline-analysis-ransomware-run-vt-2508.report.json  baseline_summary.json
analysis/baseline/baseline-analysis-rootkit-run-2508/: baseline-analysis-rootkit-run-2508.report.json  baseline_summary.json
analysis/baseline/baseline-analysis-rootkit-run-vt-2508/: baseline-analysis-rootkit-run-vt-2508.report.json  baseline_summary.json
analysis/baseline/baseline-analysis-trojan-run-2508/: baseline-analysis-trojan-run-2508.report.json  baseline_summary.json
analysis/baseline/baseline-analysis-trojan-run-vt-2508/: baseline-analysis-trojan-run-vt-2508.report.json  baseline_summary.json
analysis/llmrag/llmrag-analysis-botnet-run-2508/: llmrag-analysis-botnet-run-2508.report.json  llmrag_summary.json
analysis/llmrag/llmrag-analysis-ransomware-run-2508/: llmrag-analysis-ransomware-run-2508.report.json  llmrag_summary.json
analysis/llmrag/llmrag-analysis-rootkit-run-2508/: llmrag-analysis-rootkit-run-2508.report.json  llmrag_summary.json
analysis/llmrag/llmrag-analysis-trojan-run-2508/: llmrag-analysis-trojan-run-2508.report.json  llmrag_summary.json
config/: .secrets_template.toml  settings.toml
guides/: BaselinePipeline.md  DataSourcingMalpedia.md  DataSourcingMalwareBazaar.md  DataSourcingVXUnderground.md  IngestVXUnderground.md  IngestionPipeline.md  InstallGhidra.md  LLMRagPipeline.md  Reconciliation.md  ResultsAggregation.md  WritingHeuristicRules.md
guides/malpedia/: url_collector.py
samples/botnet/: tag_botnet_response.json
samples/ransomware/: tag_ransomware_response.json
samples/rootkit/: tag_rootkit_response.json
samples/trojan/: tag_trojan_response.json
scripts/: database.sh  decompress-samples.sh  ghidra-server.sh  install-ghidra.sh  samples-extractor.sh
src/rexis/: __init__.py  main.py
src/rexis/cli/: aggregate_commands.py  analyse_commands.py  collect_commands.py  decompile_commands.py  ingestion_commands.py  main.py  query_commands.py  utils.py
src/rexis/data/: model.py
src/rexis/facade/: ai_provider.py  haystack.py  malware_bazaar.py  tagger.py  virus_total.py
src/rexis/facade/pyghidra_mcp_client/: __init__.py
src/rexis/facade/pyghidra_mcp_client/api/: __init__.py  tool_decompile_function_post.py  tool_list_cross_references_post.py  tool_list_exports_post.py  tool_list_imports_post.py  tool_list_project_binaries_post.py  tool_list_project_program_info_post.py  tool_search_code_post.py  tool_search_functions_by_name_post.py  tool_search_symbols_by_name_post.py
src/rexis/facade/pyghidra_mcp_client/models/: __init__.py  decompile_function_form_model.py  decompile_function_response_model.py  http_validation_error.py  list_cross_references_form_model.py  list_cross_references_response_model.py  list_cross_references_response_model_cross_references_item_model.py  list_exports_form_model.py  list_exports_response_model.py  list_exports_response_model_exports_item_model.py  list_imports_form_model.py  list_imports_response_model.py  list_imports_response_model_imports_item_model.py  search_code_form_model.py  search_code_response_model.py  search_code_response_model_results_item_model.py  search_functions_by_name_form_model.py  search_functions_by_name_response_model.py  search_functions_by_name_response_model_functions_item_model.py  search_symbols_by_name_form_model.py  search_symbols_by_name_response_model.py  search_symbols_by_name_response_model_symbols_item_model.py  validation_error.py
src/rexis/operations/: analyse.py  baseline.py  collect_malpedia.py  decompile.py  ingest.py  ingest_api.py  ingest_file.py  ingest_malpedia.py  ingest_malwarebazaar.py  ingest_vxunderground.py  llmrag.py  populate_db.py
src/rexis/operations/collect/: documents.py  malpedia.py  malwarebazaar.py
src/rexis/operations/decompile/: collectors.py  engine.py  env.py  main.py  utils.py
src/rexis/operations/ingest/: ingest_api.py  ingest_file.py  ingest_html.py  ingest_json.py  ingest_pdf.py  ingest_text.py  main.py  utils.py
src/rexis/tools/: data_tagger.py  decision.py  documents.py  haystack.py  heuristics.py  malware_bazaar.py  process_documents.py  tagger.py  virus_total.py
src/rexis/tools/aggregate/: main.py  parsers.py  text_utils.py  utils.py  vt_helpers.py
src/rexis/tools/decision/: compute.py  constants.py  main.py  utils.py
src/rexis/tools/heuristics_analyser/: main.py  normal.py  rules.py  utils.py
src/rexis/tools/llm/: features.py  guardrails.py  main.py  messages.py  utils.py
src/rexis/tools/llm_analyser/: llm.py  rag.py
src/rexis/tools/reconciliation/: compute.py  constants.py  main.py  utils.py
src/rexis/tools/retrieval/: main.py  ranking.py  searches.py  store.py
src/rexis/utils/: config.py  constants.py  types.py  utils.py
